--- a/styles3.css
+++ b/styles3.css
@@ -139,12 +139,14 @@ body {
     display: flex;
     position: relative;
     width: 100%;
-    height:400px;
+    max-height: 90vh;
     margin: auto;
 }
 
 .slideshow-wrapper img {
-    object-fit: cover;
+    width: 100%;
+    height: auto;;
+    object-fit:contain;
 }
 
 .slideshow1 {
@@ -278,6 +280,11 @@ body {
         text-align: center;
     }
 
+    .openbank-container img {
+        width: 100%;
+        height: auto;
+    }
+
     .slideshow-wrapper {
         width: 100%;
         max-width: 90%;
@@ -289,16 +296,6 @@ body {
 }
 
 @media (max-width: 480px) {
-    .header-wrapper {
-        padding: 5px;
-        text-align: center;
-    }
-
-    .name-section {
-        width: 95%;
-        padding-left: 5%;
-        text-align: center;
-    }
 
     #header-name, #title-name {
         font-size: 24px;
@@ -310,6 +307,11 @@ body {
         justify-content: center;
         align-items: center;
         text-align: center;
+    }
+
+    .openbank-container img {
+        width: 100%;
+        height: auto;
     }
 
     .slideshow-wrapper {
